src/test/deca/context/valid/testMethod.deca


class A {
    protected boolean test = false;

    void setTest() {
        test = true;
    }

    void makeTest() {
        if(test) {
            println("OK");
        }
    }
}


{
    A test = new A();

    test.setTest();
    test.makeTest();
}
